# CoreMLDispatchInvestigation

./: .gitignore  README.md  main.py  pyproject.toml
analyze_results/: parse_compute_device_results.py  plot_full_baseline.py  plot_goal2_device_preferences.py  plot_precision_ablation.py
compute_plan_inspector/ComputePlanInspector/ComputePlanInspector/: main.swift
compute_plan_inspector/ComputePlanInspector/ComputePlanInspector.xcodeproj/: project.pbxproj
convert_models/: convert_distilbert.py  convert_mlp.py
convert_models/fp16/: convert_mlp_ablation.py  convert_mobilenetv2.py  convert_resnet50.py  convert_tinygpt.py  convert_tinygpt_ablation.py
convert_models/fp32/: convert_distilbert_fp32.py  convert_mlp_fp32.py  convert_mobilenetv2_fp32.py  convert_resnet50_fp32.py  convert_tinygpt_fp32.py
harness/CoreMLBenchmark/CoreMLBenchmark/: main.swift
harness/CoreMLBenchmark/CoreMLBenchmark.xcodeproj/: project.pbxproj
harness/CoreMLBenchmark/CoreMLBenchmark/DistilBERT_fp16.mlpackage/: Manifest.json
models/MobileNetV2_fp32.mlpackage/: Manifest.json
models/ResNet50_fp32.mlpackage/: Manifest.json
models/SimpleMLP_fp16.mlpackage/: Manifest.json
models/TinyGPT_fp32.mlpackage/: Manifest.json
plots/: full_baseline_fp16_summary.csv
results/: ablation_results.csv  cnn_baseline.csv  compute_device_results.csv  full_baseline_fp16.csv  full_baseline_fp32.csv  goal2_device_summary_clean.csv  goal2_preferred_device_counts.csv  mobilenetv2_fp16_baseline.csv  plot_ablation_results.py  precision_ablation_summary.csv  resnet50_fp16_baseline.csv
(+19 files in other folders)
