[project]
name = "cs259finalproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coremltools>=9.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "tqdm>=4.67.3",
    "transformers>=5.9.0",
]
